# inf-exam

./: CLAUDE.md  setup_project_mac_v6.sh
.claude/skills/celery/: SKILL.md
online-store/: CMakeLists.txt  README.md  REVIEW.md
online-store/include/: Admin.h  CardPayment.h  Customer.h  DatabaseConnection.h  Manager.h  Order.h  OrderItem.h  PaymentStrategy.h  Product.h  ReportService.h  SBPPayment.h  StoreService.h  User.h  WalletPayment.h
online-store/sql/: 00_tables.sql  01_functions.sql  01_sample_data.sql  02_procedures.sql  03_triggers.sql  04_sample_data.sql
online-store/src/: Admin.cpp  Customer.cpp  Manager.cpp  Order.cpp  OrderItem.cpp  PaymentStrategy.cpp  Product.cpp  ReportService.cpp  StoreService.cpp  User.cpp  main.cpp
